--- a/homeManagerModules/waybar/style.css
+++ b/homeManagerModules/waybar/style.css
@@ -80,14 +80,16 @@ tooltip {
 #cpu,
 #memory,
 #network,
-#pulseaudio {
+#pulseaudio,
+#temperature {
     background-color: #434c5e;
     border: 2px solid #4c566a;
     color: #ffffff;
 }
 
 #cpu.critical,
-#memory.critical {
+#memory.critical,
+#temperature.critical {
     background-color: #434c5e;
     border: 2px solid #4c566a;
     color: #bf616a;
