--- a/homeManagerModules/waybar/style.css
+++ b/homeManagerModules/waybar/style.css
@@ -80,16 +80,14 @@ tooltip {
 #cpu,
 #memory,
 #network,
-#pulseaudio,
-#temperature {
+#pulseaudio {
     background-color: #434c5e;
     border: 2px solid #4c566a;
     color: #ffffff;
 }
 
 #cpu.critical,
-#memory.critical,
-#temperature.critical {
+#memory.critical {
     background-color: #434c5e;
     border: 2px solid #4c566a;
     color: #bf616a;
