--- a/homeManagerModules/waybar/style.css
+++ b/homeManagerModules/waybar/style.css
@@ -10,13 +10,13 @@
 }
 
 window#waybar {
-    background: #2e3440;
-    border: 2px solid #4c566a;
+    background: @base00;
+    border: 2px solid @base03;
 }
 
 tooltip {
-    background-color: #3b4252;
-    border: 2px solid #4c566a;
+    background-color: @base01;
+    border: 2px solid @base03;
 }
 
 #clock,
@@ -31,9 +31,9 @@ tooltip {
 }
 
 #workspaces {
-    background-color: #434c5e;
+    background-color: @base02;
     margin: 6px 0px 6px 6px;
-    border: 2px solid #4c566a;
+    border: 2px solid @base03;
 }
 
 .modules-left #workspaces button {
@@ -42,61 +42,61 @@ tooltip {
     box-shadow: inset 0 -3px transparent;
     padding: 5px 10px;
     margin: 0px;
-    color: #ffffff;
+    color: @base06;
     border-radius: 3px;
 }
 
 .modules-left #workspaces button.active {
-    background-color: #8fbcbb;
+    background-color: @base07;
     padding: 5px 10px;
 }
 
 #workspaces button.focused {
-    color: #ddc7a1;
+    color: @base0A;
 }
 
 #workspaces button.urgent {
-    background-color: #e78a4e;
+    background-color: @base09;
 }
 
 #clock {
-    background-color: #434c5e;
-    border: 2px solid #4c566a;
-    color: #ffffff;
+    background-color: @base02;
+    border: 2px solid @base03;
+    color: @base06;
 }
 
 #tray {
-    background-color: #434c5e;
-    border: 2px solid #4c566a;
-    color: #ffffff;
+    background-color: @base02;
+    border: 2px solid @base03;
+    color: @base06;
 }
 
 #battery {
-    background-color: #434c5e;
-    border: 2px solid #4c566a;
-    color: #ffffff;
+    background-color: @base02;
+    border: 2px solid @base03;
+    color: @base06;
 }
 
 #cpu,
 #memory,
 #network,
 #pulseaudio {
-    background-color: #434c5e;
-    border: 2px solid #4c566a;
-    color: #ffffff;
+    background-color: @base02;
+    border: 2px solid @base03;
+    color: @base06;
 }
 
 #cpu.critical,
 #memory.critical {
-    background-color: #434c5e;
-    border: 2px solid #4c566a;
-    color: #bf616a;
+    background-color: @base02;
+    border: 2px solid @base03;
+    color: @base08;
 }
 
 #battery.warning,
 #battery.critical,
 #battery.urgent {
-    background-color: #434c5e;
-    border: 2px solid #4c566a;
-    color: #bf616a;
+    background-color: @base02;
+    border: 2px solid @base03;
+    color: @base08;
 }
