--- a/homeManagerModules/waybar/style.css
+++ b/homeManagerModules/waybar/style.css
@@ -17,7 +17,6 @@
 
 * {
     border: none;
-    border-radius: 0;
     min-height: 0;
     font-family: "JetBrains Mono";
     font-weight: 500;
@@ -41,8 +40,12 @@ tooltip {
 #cpu,
 #memory,
 #battery,
-#network,
+#custom-notification,
+#language,
 #pulseaudio {
+    color: @base06;
+    background-color: @base02;
+    border: 2px solid @base03;
     margin: 6px 6px 6px 0px;
     padding: 2px 8px;
 }
@@ -76,6 +79,7 @@ tooltip {
     background-color: @base09;
 }
 
+/*
 #clock {
     background-color: @base02;
     border: 2px solid @base03;
@@ -102,6 +106,8 @@ tooltip {
     border: 2px solid @base03;
     color: @base06;
 }
+
+*/
 
 #cpu.critical,
 #memory.critical {
