made some improvements to waybar

--- a/homeManagerModules/waybar/style.css
+++ b/homeManagerModules/waybar/style.css
@@ -50,6 +50,10 @@ tooltip {
     padding: 2px 8px;
 }
 
+#custom-notification {
+    padding: 8px 15px;
+}
+
 #workspaces {
     background-color: @base02;
     margin: 6px 0px 6px 6px;
